--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "@react-navigation/native-stack": "^7.8.5",
     "@reduxjs/toolkit": "^2.11.0",
     "axios": "^1.13.2",
+    "eas-cli": "^18.0.1",
     "expo": "~54.0.33",
     "expo-constants": "~18.0.13",
     "expo-device": "~8.0.10",
